<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activites.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical">


        <com.cilpl.clusters.utils.TwCenMTBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/welcomeback"
            android:textColor="@color/yellow"
            android:textSize="@dimen/_20sdp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.cilpl.clusters.utils.EditTwCenMTFont
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1.4"
                android:singleLine="true"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            android:layout_marginEnd="@dimen/_10sdp">

            <com.cilpl.clusters.utils.EditTwCenMTFont
                android:id="@+id/password_id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_weight="1.4"
                android:singleLine="true"
                android:paddingStart="@dimen/_5sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
            android:id="@+id/signinbtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:background="@color/btn_clr"
            android:textColor="@color/white"
            android:textSize="16dp" />
        <com.cilpl.clusters.utils.TwCenMTFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@string/forget_password"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.cilpl.clusters.utils.TwCenMTFont
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"/>
        <com.cilpl.clusters.utils.TwCenMTBold
            android:id="@+id/signupPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>



</RelativeLayout>