<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Activites.CartActivity">
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/backicon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:padding="@dimen/_3sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/back_icn" />

        <com.cilpl.clusters.utils.TwCenMTFont
            android:id="@+id/texname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cart"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/header"
        android:id="@+id/languages_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:visibility="visible" />
    <ImageView
        android:id="@+id/errormessage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="gone"
        android:src="@drawable/not_available_workstation"
        android:text="@string/no_data_found"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp" />

    <LinearLayout
        android:id="@+id/btns"
      android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:orientation="horizontal"
        android:visibility="visible"
        android:weightSum="2">

        <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
            android:id="@+id/addcart"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/btn0_bg"
            android:text="@string/addmore"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />


        <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
            android:id="@+id/checkoutbtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/btn_bg"
            android:text="@string/checkout_txt"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>