<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/survey_et"
        android:elevation="@dimen/_3sdp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <com.cilpl.clusters.utils.TwCenMTFont
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_add"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
                android:id="@+id/alert_clncel"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/red_bg2"
                android:gravity="center"
                android:text="@string/cancel_txt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
                android:id="@+id/alertyes_btn"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/submit_bg"
                android:gravity="center"
                android:text="@string/yes_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>