<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:shapeAppearance="@style/Rounded">

                <com.cilpl.clusters.utils.EditTwCenMTFont
                    android:id="@+id/fstname"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1.4"
                    android:hint="@string/uname"
                    android:inputType="textCapWords"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_5sdp"

                app:shapeAppearance="@style/Rounded">

                <com.cilpl.clusters.utils.EditTwCenMTFont
                    android:id="@+id/email_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1.4"
                    android:hint="@string/email_add"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:shapeAppearance="@style/Rounded">

                <com.cilpl.clusters.utils.EditTwCenMTFont
                    android:id="@+id/moblie_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1.4"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_5sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.cilpl.clusters.utils.TwCenMTBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/support_for"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="@drawable/textroundbg"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/supportspinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/txtVw"
                    android:layout_gravity="center"
                    android:layout_toEndOf="@+id/txtVw"
                    android:overlapAnchor="false"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <com.cilpl.clusters.utils.TwCenMTBold
                android:id="@+id/errormessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/please_select_any_option"
                android:textColor="@color/Pink"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                app:shapeAppearance="@style/Rounded">

                <com.cilpl.clusters.utils.EditTwCenMTFont
                    android:id="@+id/message_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:gravity="top|start"
                    android:hint="@string/message"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_5sdp"
                    android:scrollHorizontally="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
                android:id="@+id/supportbtn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn0_bg"
                android:text="@string/submit_txt"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>



</LinearLayout>