<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:padding="@dimen/_5sdp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/_10sdp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/survey_et"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <com.cilpl.clusters.utils.TwCenMTBold
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/areusureexit_txt"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/_2sdp">

            <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
                android:id="@+id/alert_clncel"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:background="@drawable/red_bg2"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:text="@string/cancel_txt"
                android:textAllCaps="false"
                android:textColor="#505052"
                android:textSize="@dimen/_13sdp" />

            <com.cilpl.clusters.utils.ButtonEditTwCenMTFont
                android:id="@+id/alertyes_btn"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/blue_bg"
                android:gravity="center"
                android:text="@string/yes_btn"
                android:padding="@dimen/_2sdp"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>